now use winston for log info and error instead of console log

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "elasticsearch": "1.0.3",
     "underscore": "~1.5.2",
-    "q": "~0.9.7"
+    "q": "~0.9.7",
+    "winston": "~0.7.2"
   },
   "peerDependencies": {
     "mongoose": "3.8.x"
