--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "underscore": "~1.5.2",
     "q": "~0.9.7",
     "winston": "~0.7.2",
-    "async": "~0.9.-"
+    "async": "~0.9"
   },
   "peerDependencies": {
     "mongoose": "3.8.x"
