--- a/package.json
+++ b/package.json
@@ -19,23 +19,22 @@
   },
   "main": "lib/elasticgoose.js",
   "dependencies": {
-    "elasticsearch": "4.0.x",
-    "underscore": "~1.5.2",
+    "elasticsearch": "~10.0.1",
+    "underscore": "~1.8.3",
     "q": "~0.9.7",
     "winston": "~0.7.2",
-    "async": "~0.9",
-    "mongoose": "~3.8.16"
+    "async": "~0.9"
   },
   "peerDependencies": {
-    "mongoose": "3.8.x"
+    "mongoose": "~4.2.9"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "mongoose": "~3.8.1"
+    "mongoose": "~4.2.9"
   },
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.12.0"
   },
   "bugs": {
     "url": "https://github.com/Waidd/elasticmongoose/issues"
